--- a/.gitignore
+++ b/.gitignore
@@ -117,6 +117,7 @@ dmypy.json
 # Edit at https://www.gitignore.io/?templates=visualstudiocode
 
 ### VisualStudioCode ###
+.vscode/
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
